<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/trackingFragment">

    <fragment
        android:id="@+id/trackingFragment"
        android:name="com.tjcelaya.calwrite.ui.tracking.TrackingFragment"
        android:label="@string/fragment_tracking_label"
        tools:layout="@layout/fragment_tracking">

        <action
            android:id="@+id/action_tracking_to_events"
            app:destination="@id/eventsFragment" />
        <action
            android:id="@+id/action_tracking_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_tracking_to_calendar_setup"
            app:destination="@id/calendarSetupFragment" />
        <action
            android:id="@+id/action_tracking_to_add_event"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/action_tracking_to_add_edit_event_type"
            app:destination="@id/addEditEventTypeFragment" />
        <action
            android:id="@+id/action_tracking_to_ledger"
            app:destination="@id/ledgerFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.tjcelaya.calwrite.ui.events.EventsFragment"
        android:label="@string/fragment_events_label"
        tools:layout="@layout/fragment_events">

        <action
            android:id="@+id/action_events_to_tracking"
            app:destination="@id/trackingFragment" />
        <action
            android:id="@+id/action_events_to_add_edit_event_type"
            app:destination="@id/addEditEventTypeFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditEventTypeFragment"
        android:name="com.tjcelaya.calwrite.ui.events.AddEditEventTypeFragment"
        android:label="@string/fragment_add_edit_event_type_label"
        tools:layout="@layout/fragment_add_edit_event_type">

        <argument
            android:name="eventTypeId"
            app:argType="long"
            android:defaultValue="0L" />

        <action
            android:id="@+id/action_add_edit_event_type_to_events"
            app:destination="@id/eventsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tjcelaya.calwrite.ui.settings.SettingsFragment"
        android:label="@string/fragment_settings_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settings_to_tracking"
            app:destination="@id/trackingFragment" />
        <action
            android:id="@+id/action_settings_to_calendar_setup"
            app:destination="@id/calendarSetupFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendarSetupFragment"
        android:name="com.tjcelaya.calwrite.ui.settings.CalendarSetupFragment"
        android:label="@string/fragment_calendar_setup_label"
        tools:layout="@layout/fragment_calendar_setup">

        <action
            android:id="@+id/action_calendar_setup_to_tracking"
            app:destination="@id/trackingFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.tjcelaya.calwrite.ui.events.AddEventFragment"
        android:label="@string/fragment_add_event_label"
        tools:layout="@layout/fragment_add_event">

        <action
            android:id="@+id/action_add_event_to_tracking"
            app:destination="@id/trackingFragment" />
    </fragment>
    <fragment
        android:id="@+id/ledgerFragment"
        android:name="com.tjcelaya.calwrite.ui.ledger.LedgerFragment"
        android:label="@string/ledger_title"
        tools:layout="@layout/fragment_ledger">

        <!-- Set by the SAVE_WITH_UNDO notification's Undo action; -1 means "just open the list". -->
        <argument
            android:name="undoEventId"
            app:argType="long"
            android:defaultValue="-1L" />

        <action
            android:id="@+id/action_ledger_to_tracking"
            app:destination="@id/trackingFragment" />
    </fragment>

</navigation>
